--- a/paper.tex
+++ b/paper.tex
@@ -216,7 +216,7 @@ The bulge is also perturbed from a perfect S\'{e}rsic profile by multiplying the
 \begin{align}
 1+\sum_{n=1}^6 a_n \cos\left( n \theta  + \phi_n \right)
 \end{align}
-where $\phi_n$ is a random phase.  The coefficients are picked randomly from between -0.002 and 0.002. \red{(reference)}
+where $\phi_n$ is a random phase.  The coefficients are picked randomly from between -0.002 and 0.002. 
 
 These foreground galaxies are rotated in three dimensions with the halos of the lens each time a random lens is produced so that they remain in the same positions relative to the mass.  All the random parameters are also reassigned with every realization of the lens.
 
@@ -834,7 +834,10 @@ CMU-DeepLens-ResNet get the best scores.
  \label{fig:roc_kids}
 \end{figure*}
 
-Figures~\ref{fig:roc_space} and \ref{fig:roc_ground} show the ROC curves for all the entries.  In addition, figure~\ref{fig:roc_kids} shows the ROC curves for only the ground-based images where an actual KiDS image was used (see section~\ref{sec:sim-ground-based}).  It can be seen that the classifiers do uniformly less well on this subset.  This indicates that the simulated galaxy images are different from the real ones and that the classifiers are able to distinguish fake foreground galaxies from lenses more easily than from real galaxies.  This is perhaps not unexpected, but does show that the simulated lenses need to be improved before the raw numbers can be directly used to evaluate the performance of a classifier on real data.
+Figures~\ref{fig:roc_space} and \ref{fig:roc_ground} show the ROC curves for all the entries.  
+Note that ROC curves for the ground-based challenge (figure~\ref{fig:roc_ground}) are uniformly better than those for the space-based challenge (figure~\ref{fig:roc_space}).  This is because of the importance of color information in discriminating lensed arcs from pieces of the foreground lens galaxy.
+
+In addition, figure~\ref{fig:roc_kids} shows the ROC curves for only the ground-based images where an actual KiDS image was used (see section~\ref{sec:sim-ground-based}).  It can be seen that the classifiers do uniformly less well on this subset.  This indicates that the simulated galaxy images are different from the real ones and that the classifiers are able to distinguish fake foreground galaxies from lenses more easily than from real galaxies.  Some methods are more affected by this than others, but none seem to be immune, not even the human classification. This is perhaps not unexpected, but does show that the simulated lenses need to be improved before the raw numbers can be directly used to evaluate the performance of a classifier on real data.
 
 
 \begin{figure*}
@@ -887,7 +890,7 @@ Figures~\ref{fig:roc_space} and \ref{fig:roc_ground} show the ROC curves for all
 
 Figures~\ref{fig:einstein_space} and \ref{fig:einstein_ground} shows the AUROC, TPR$_0$, TPR$_{10}$ and fraction of lenses as a function of a lower cutoff on the Einstein radius (area).  There is also a vertical dotted line that indicates where no more than 100 lenses in the test sample had Einstein radii larger than this mark.  Beyond this point one should be suspicious of small number statistics.  When deriving the distribution of Einstein radii from data these curves would need to be used to correct for detection bias.  It can be seen the CMU-DeepLens-ResNet, Manchester1, Manchester SVM and GAMOCLASS obtain significantly higher TPR$_0$ and  TPR$_{10}$ for larger Einstein radii.  Manchester1 is the human inspection method.  In some cases the TPR$_0$'s are above 50\% of the lenses that meet this criterion.  Remember that many of the so called lenses are very dim or there is no significant arc because of the source position is well outside the caustic.  If an additional require was placed on the definition of a lens, such as the brightness of the arc being above a threshold, the TPRs would go up.
 
-Figures~\ref{fig:flux_space} and \ref{fig:flux_ground} are the same except that the flux in the lensed image is used as the threshold.  We count only the flux in pixels with flux over one $\sigma$ of the background.  In some cases one can see an abrupt rise in the TPRs at some flux threshold.  CMU-DeepLens-ResNet in particular reaches a TPR$_0$ above 75\% for the brightest $\sim$ 10\% of the lenses.
+Figures~\ref{fig:flux_space} and \ref{fig:flux_ground} are the same except that the flux in the lensed image is used as the threshold.  We count only the flux in pixels with flux over one $\sigma$ of the background.  In some cases one can see an abrupt rise in the TPRs at some flux threshold.  CMU-DeepLens-ResNet in particular reaches a TPR$_0$ above 75\% for the brightest $\sim$ 10\% of the lenses. \red{(Find these numbers for the real KiDS sample)}
 
 A lensed image can be bright without being visibly distorted as in the case of a unresolved images.  Figures~\ref{fig:npixel_space} and \ref{fig:npixel_ground} use the number of pixels in the lensed image(s) that are over  one $\sigma$ of the background.  In this case also some classifiers show an abrupt improvement when the image is required to be larger than some threshold.  Interestingly in some cases the TPRs go down with lensed image size after reaching a peak.  This could be because they are not differentiating the arcs from companion galaxies as well in this regime.  There were also cases where the arc intersects with the borders of the image that might cause them to be missed.
 
@@ -900,15 +903,16 @@ Figures~\ref{fig:flux_contrast_space} and \ref{fig:flux_contrast_ground} investi
 \section{Conclusions \& discussion}
 \label{sec:conclusion}
 
-A large variety of lens finding methods were tested on simulated images that were developed separately.    We found that some methods could recover more than 50\% of the lenses above a lens image brightness or size threshold without a single false positive.  If the data closely resembled the simulations we would already have reasonably good methods whose efficiency and biases can be quantitatively characterized.
+A large variety of lens finding methods were tested on simulated images that were developed separately.    We found that some methods could recover more than 50\% of the lenses above a lensed image brightness or size threshold without a single false positive out of 100,000 candidates.  If the data closely resembled the simulations we would already have reasonably good methods whose efficiency and biases can be quantitatively characterized.
 
-We have done a fairly good jobs of determining that lenses can be identified in a population of fairly "normal" galaxies.  It is the rare "abnormal" objects that pose the greatest challenge.  When real KiDS data was used in the simulations the classifiers were all less accurate and it was only human inspection that found the one jackpot lens in the data.  Things like ring galaxies, tidal tails in merging galaxies and irregular galaxies can be mistaken for lenses and were not well represented in the simulated data.  Accurately reproducing these objects will be an objective of future work.
+We have done a fairly good jobs of determining that lenses can be identified in a population of fairly "normal" galaxies.  It is the rare "abnormal" objects that pose the greatest challenge.  When real KiDS data was used in the simulations the classifiers were all less accurate and it was only human inspection that found the one jackpot lens (a double Einstein ring with two background sources) in the data.  Things like ring galaxies, tidal tails in merging galaxies and irregular galaxies can be mistaken for lenses and were not well represented in the simulated data.  Accurately reproducing these objects will be an objective of future work.
 
-It was surprising to some of the authors how well CNN and SVM methods did relative to human inspection.  These methods find differences in the classes of images that are not obvious to a human and can classify things as lenses with high confidence where a human would have doubt.  This ability comes with some danger of over fitting to the training set however.  The distinguishing characteristics might only be a property of simulated data and not of real data.  The confidence one will have in these methods is really the confidence one has in the realism of the simulations.
+It was surprising to some of the authors how well CNN and SVM methods did relative to human inspection.  These methods find differences in the classes of images that are not obvious to a human and can classify things as lenses with high confidence where a human would have doubt.  This ability comes with some danger of over fitting to the training set however.  The distinguishing characteristics might only be a property of simulated data and not of real data.  In principle, SVM methods might potentially mitigate this somewhat because with them one can choose which features to used based on knowledge of the properties of irregular galaxies or ring galaxies for example.  This has yet to be shown however.
+The confidence one will have in these machine learning methods is really based on the confidence one has in the realism of the simulations.   
 
 When initiating this project we had a concern that current methods would be too slow or require too much human intervention to handle large data sets.  Happily this seems not to be a problem with most of the automatic methods.  The CNN and SVM codes take some time to train, but once trained they are very fast in classifying objects.  Billions of objects can be easily handled.
 
-Another lesson is that color information is very important.  Even with lower noise levels, higher resolution, a simpler PSF and no masking the lenses in the space-based set were harder to find than the lenses in the ground-based set.  Having multiple bands clearly makes a big difference.  Euclid will have several infrared bands with lower resolution than the visible images that were not included in the challenge.  Even rather low resolution information from another instrument or telescope when combined with higher resolution data in one band might significantly improve the detection rates.
+Another lesson is that color information is very important.  Even with lower noise levels, higher resolution, a simpler PSF and no masking the lenses in the space-based set were harder to find than the lenses in the ground-based set (see figures~\ref{fig:roc_space} and \ref{fig:roc_ground}).  Having multiple bands clearly makes a significant difference.  Euclid will have several infrared bands with lower resolution than the visible images that were not included in the challenge.  Even rather low resolution information from another instrument or telescope when combined with higher resolution data in one band might significantly improve the detection rates.  Combining ground based data, such as LSST, with space based data, such as Euclid, would likely boost the detection rates by factors of several.
 
 
 \section*{Acknowledgements}
