--- a/paper.tex
+++ b/paper.tex
@@ -365,9 +365,7 @@ In the full version of YattaLens, a lens modeling step is performed to improve t
 
 \subsection{Machine Learning Methods that use pre-selected features}
 
-These are methods that classify the objects by making linear or nonlinear boundaries in a feature space.  The features are properties of the image and are typically chosen by the user with a combination of knowledge, intuition and trial-and-error.  Using the training set, an optimal boundaries are found according to a criterion that depends on the method.  The machine learns which combinations of features are best for distinguishing between lenses and non-lenses.
-
-\red{Philippa, what do you think of this? }
+These are methods that classify the objects by making linear or nonlinear boundaries in a feature space.  The features are properties of the image and are typically chosen by the user with a combination of knowledge, intuition and trial-and-error.  Using the training set, an optimal boundaries are found according to a criterion that depends on the method.  The machine learns how to weight the features best for distinguishing between lenses and non-lenses.
 
 \subsubsection{Gabor-SVM (Hartley, Flamary)}
 
