Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -105,6 +105,7 @@ Manuel B. Valent\'in,$^{19}$
 and Santiago Velasco-Forero,$^{10}$
 \\
 % List of institutions
+\vspace{0.5cm}\\
 $^{1}$ Departimento di Fisica \& Astronomia, Universit\`a di Bologna, via Gabetti 93/2, 4012 Bologna, Italy \\
 $^{2}$ IRAP, Universit\'e de Toulouse, CNRS, UPS, Toulouse, France.\\
 $^{3}$ Sorbonne Universit\'{e}s, UPMC Univ. Paris 6 and CNRS, UMR 7095, Institut d'Astrophysique de Paris,  \\ 98bis Bd Arago, F-75014, Paris France.\\
